# OOP-Zombie-Survival-Game

./: .gitignore  README.md  main.py  pyproject.toml
core/: fonts.py  settings.py
data/: players.json
effects/: damage_flash.py
entities/: bullet.py  decoration.py  obstacle.py  particle.py  player.py  powerup.py  weapon.py  zombie.py
game/: game.py
screens/: how_to_play.py  leaderboard_screen.py  login_screen.py  main_menu.py  settings_screen.py
systems/: data_manager.py
ui/: ui_components.py
